--- a/clusters/dev/helm-release-example.yaml
+++ b/clusters/dev/helm-release-example.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: podinfo
-      version: "6.2.3" # {"$imagepolicy": "management:podinfo:tag"}
+      version: "6.2.3" 
       sourceRef:
         kind: HelmRepository
         name: podinfo
@@ -26,7 +26,7 @@ spec:
   values:
     image:
       repository: ghcr.io/stefanprodan/podinfo
-      tag: "5.0.0" # {"$imagepolicy": "management:podinfo:tag"}
+      tag: "5.0.0" 
     service:
       grpcService: backend
     resources:
